fix: Add data attributes to help fix responsiveness on mobile

--- a/public/index.html
+++ b/public/index.html
@@ -164,6 +164,7 @@
           class="menu uc-fs13-fw400"
           aria-label="Open Info Section"
           data-modal-button="open"
+          data-hover-button
         >
           Info
         </button>
@@ -173,6 +174,7 @@
           target="_blank"
           class="send-message uc-fs13-fw400"
           data-faded-out="true"
+          data-hover-button
           >Send message</a
         >
       </div>
@@ -428,6 +430,7 @@
                     class="project-link uc-fs16-fw500"
                     disabled
                     data-load-reveal
+                    hidden
                     >Visit website</a
                   >
                 </div>
@@ -449,7 +452,7 @@
                 <div class="description-title">
                   <h3 class="project-title uc-fs16-fw500">VitoQR Waiter App</h3>
                   <p class="project-attribution uc-fs16-fw500">w/Vitaliy</p>
-                  <a href="#" class="project-link uc-fs16-fw500"
+                  <a href="#" class="project-link uc-fs16-fw500 hidden"
                     >Visit website</a
                   >
                 </div>
@@ -662,6 +665,7 @@
                 target="_blank"
                 class="info-send_message send-message uc-fs13-fw400"
                 data-modal-fade
+                data-hover-button
                 >Send message</a
               >
             </div>
