perf: Add favicon and meta tags for the website

--- a/public/index.html
+++ b/public/index.html
@@ -5,43 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary Meta Tags -->
-    <meta name="title" content="Home — Holistic Mental Health Therapy" />
+    <title>Home — Williams Alamu</title>
+    <meta name="title" content="Home — Williams Alamu" />
     <meta
       name="description"
-      content="At Holistic Health, we're committed to revolutionizing the landscape of mental health and therapy through our unwavering dedication to research and technology."
+      content="Williams Alamu is a creative designer from Lagos with a keen interest in design. Driven by the art of bringing ideas to life through crafted visuals and motion."
     />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://holistic-nu.vercel.app/" />
-    <meta property="og:title" content="Holistic — Mental Health Therapy" />
+    <meta property="og:url" content="https://willie-design.com" />
+    <meta property="og:title" content="Home — Williams Alamu" />
     <meta
       property="og:description"
-      content="At Holistic Health, we're committed to revolutionizing the landscape of mental health and therapy through our unwavering dedication to research and technology."
+      content="Williams Alamu is a creative designer from Lagos with a keen interest in design. Driven by the art of bringing ideas to life through crafted visuals and motion."
     />
     <meta
       property="og:image"
-      content="https://res.cloudinary.com/dp20bvzhn/image/upload/q_50/v1720808289/holistic%20mental%20health%20therapy/Hero_ptsrce.png"
+      content="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725969587/willie-design/v2Thumbnail_zciv0c.webp"
     />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="http://holistic-nu.vercel.app/" />
-    <meta
-      property="twitter:title"
-      content="Home — Holistic Mental Health Therapy"
-    />
+    <meta property="twitter:url" content="https://willie-design.com" />
+    <meta property="twitter:title" content="Home — Williams Alamu" />
     <meta
       property="twitter:description"
-      content="At Holistic Health, we're committed to revolutionizing the landscape of mental health and therapy through our unwavering dedication to research and technology."
+      content="Williams Alamu is a creative designer from Lagos with a keen interest in design. Driven by the art of bringing ideas to life through crafted visuals and motion."
     />
     <meta
       property="twitter:image"
-      content="https://res.cloudinary.com/dp20bvzhn/image/upload/q_50/v1720808289/holistic%20mental%20health%20therapy/Hero_ptsrce.png"
+      content="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725969587/willie-design/v2Thumbnail_zciv0c.webp"
     />
 
     <!-- Favicon -->
-    <!-- <link
+    <link
       rel="apple-touch-icon"
       sizes="57x57"
       href="./css/assets/favicon/apple-icon-57x57.png"
@@ -112,12 +110,13 @@
     />
     <link rel="manifest" href="./css/assets/favicon/manifest.json" />
     <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
-    <meta name="theme-color" content="#ffffff" /> -->
+    <meta
+      name="msapplication-TileImage"
+      content="./css/assets/favicon/ms-icon-144x144.png"
+    />
+    <meta name="theme-color" content="#ffffff" />
 
     <link rel="stylesheet" href="./css/style.css" />
-
-    <title>Home — Willie 2.0</title>
   </head>
   <body>
     <!-- Grid layout overlay -->
