--- a/index.html
+++ b/index.html
@@ -42,81 +42,81 @@
     <link
       rel="apple-touch-icon"
       sizes="57x57"
-      href="./css/assets/favicon/apple-icon-57x57.png"
+      href="/public/css/assets/favicon/apple-icon-57x57.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="60x60"
-      href="./css/assets/favicon/apple-icon-60x60.png"
+      href="/public/css/assets/favicon/apple-icon-60x60.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="72x72"
-      href="./css/assets/favicon/apple-icon-72x72.png"
+      href="/public/css/assets/favicon/apple-icon-72x72.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="76x76"
-      href="./css/assets/favicon/apple-icon-76x76.png"
+      href="/public/css/assets/favicon/apple-icon-76x76.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="114x114"
-      href="./css/assets/favicon/apple-icon-114x114.png"
+      href="/public/css/assets/favicon/apple-icon-114x114.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="120x120"
-      href="./css/assets/favicon/apple-icon-120x120.png"
+      href="/public/css/assets/favicon/apple-icon-120x120.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="144x144"
-      href="./css/assets/favicon/apple-icon-144x144.png"
+      href="/public/css/assets/favicon/apple-icon-144x144.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="152x152"
-      href="./css/assets/favicon/apple-icon-152x152.png"
+      href="/public/css/assets/favicon/apple-icon-152x152.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="./css/assets/favicon/apple-icon-180x180.png"
+      href="/public/css/assets/favicon/apple-icon-180x180.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="192x192"
-      href="./css/assets/favicon/android-icon-192x192.png"
+      href="/public/css/assets/favicon/android-icon-192x192.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./css/assets/favicon/favicon-32x32.png"
+      href="/public/css/assets/favicon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="96x96"
-      href="./css/assets/favicon/favicon-96x96.png"
+      href="/public/css/assets/favicon/favicon-96x96.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="./css/assets/favicon/favicon-16x16.png"
+      href="/public/css/assets/favicon/favicon-16x16.png"
     />
-    <link rel="manifest" href="./css/assets/favicon/manifest.json" />
+    <link rel="manifest" href="/public/css/assets/favicon/manifest.json" />
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta
       name="msapplication-TileImage"
-      content="./css/assets/favicon/ms-icon-144x144.png"
+      content="/public/css/assets/favicon/ms-icon-144x144.png"
     />
     <meta name="theme-color" content="#ffffff" />
 
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="/public/css/style.css" />
   </head>
   <body>
     <!-- Grid layout overlay -->
@@ -766,6 +766,6 @@
     <script src="https://unpkg.com/@studio-freight/lenis@1.0.42/dist/lenis.min.js"></script>
     <script src="https://res.cloudinary.com/dp20bvzhn/raw/upload/v1722087885/third-settlements/SplitText.min_yrgwof.js"></script>
 
-    <script src="./script.js"></script>
+    <script src="/public/script.js"></script>
   </body>
 </html>
