--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <div class="projects">
           <div class="projects-item" data-slide-in>
             <img
-              src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_50/q_50/v1725311134/willie-design/balky_ms0wyc.webp"
+              src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725311134/willie-design/balky_ms0wyc.webp"
               alt="a laptop mockup showing the Balky Studio Website"
               class="projects-item_image"
               data-scale-in
@@ -241,7 +241,7 @@
                     aria-label="Previous slider"
                   >
                     <img
-                      src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_50/v1725397977/willie-design/arrow_hwkbyh.svg"
+                      src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725397977/willie-design/arrow_hwkbyh.svg"
                       alt="Left Arrow Icon"
                     />
                   </button>
@@ -251,55 +251,61 @@
                     aria-label="Next slider"
                   >
                     <img
-                      src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_50/v1725397977/willie-design/arrow_hwkbyh.svg"
+                      src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725397977/willie-design/arrow_hwkbyh.svg"
                       alt="Right Arrow Icon"
                     />
                   </button>
                 </div>
 
                 <div class="mouse-controls">
-                  <button class="prev-control"></button>
-                  <button class="next-control"></button>
+                  <button
+                    class="prev-control"
+                    aria-label="Previous button for image slider mouse control"
+                  ></button>
+                  <button
+                    class="next-control"
+                    aria-label="Next button for image slider mouse control"
+                  ></button>
                   <img
-                    src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_50/v1725397977/willie-design/arrow_hwkbyh.svg"
+                    src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725397977/willie-design/arrow_hwkbyh.svg"
                     alt="Left Arrow Icon"
                     class="mouse-controls_arrow"
                   />
                 </div>
 
                 <img
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_50/v1725310746/willie-design/TSM_1_otof4y.webp"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725310746/willie-design/TSM_1_otof4y.webp"
                   alt="Collage image showcasing the TopSphere Media website project"
                   class="left-image"
                 />
 
                 <img
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_50/v1725310742/willie-design/TSM_2_oenh8j.webp"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725310742/willie-design/TSM_2_oenh8j.webp"
                   alt="Image showcasing the footer section of the TopSphere Media website project"
                   class="left-image"
                 />
 
                 <img
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_50/v1725310751/willie-design/TSM_3_mlnvxh.webp"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725310751/willie-design/TSM_3_mlnvxh.webp"
                   alt="Collage image showcasing the TopSphere Media website project"
                   class="left-image"
                 />
 
                 <img
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_50/v1725310747/willie-design/TSM_5_cvin31.webp"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725310747/willie-design/TSM_5_cvin31.webp"
                   alt="Image showcasing the hero section of the TopSphere Media website project"
                   class="left-image"
                 />
 
                 <img
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_50/v1725875886/willie-design/TSM_4.1_a0edcm.webp"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725875886/willie-design/TSM_4.1_a0edcm.webp"
                   alt="Image showcasing the hero section of the TopSphere Media website project"
                   class="left-image"
                 />
               </div>
               <div class="right-image_wrapper">
                 <img
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_50/v1725310748/willie-design/tsm_photography_ken6xc.webp"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725310748/willie-design/tsm_photography_ken6xc.webp"
                   alt="Picture of a videographer carrying an adnvanced camera during a video shoot"
                   class="right_image"
                 />
@@ -325,7 +331,7 @@
 
           <div class="projects-item">
             <img
-              src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_50/v1725310759/willie-design/vana_rmnkk0.webp"
+              src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725310759/willie-design/vana_rmnkk0.webp"
               alt="image showcasing the Vana X-Team Project"
               class="projects-item_image"
             />
@@ -357,7 +363,7 @@
                     aria-label="Previous slider"
                   >
                     <img
-                      src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_50/v1725397977/willie-design/arrow_hwkbyh.svg"
+                      src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725397977/willie-design/arrow_hwkbyh.svg"
                       alt="Left Arrow Icon"
                     />
                   </button>
@@ -367,42 +373,48 @@
                     aria-label="Next slider"
                   >
                     <img
-                      src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_50/v1725397977/willie-design/arrow_hwkbyh.svg"
+                      src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725397977/willie-design/arrow_hwkbyh.svg"
                       alt="Right Arrow Icon"
                     />
                   </button>
                 </div>
 
                 <div class="mouse-controls">
-                  <button class="prev-control"></button>
-                  <button class="next-control"></button>
+                  <button
+                    class="prev-control"
+                    aria-label="Previous button for image slider mouse control"
+                  ></button>
+                  <button
+                    class="next-control"
+                    aria-label="Next button for image slider mouse control"
+                  ></button>
                   <img
-                    src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_50/v1725397977/willie-design/arrow_hwkbyh.svg"
+                    src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725397977/willie-design/arrow_hwkbyh.svg"
                     alt="Left Arrow Icon"
                     class="mouse-controls_arrow"
                   />
                 </div>
 
                 <img
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_50/v1725310752/willie-design/CBG_4_alpdmr.webp"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725310752/willie-design/CBG_4_alpdmr.webp"
                   alt="A picture showcasing the Chosen By God website project by Willie"
                   class="left-image"
                 />
 
                 <img
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_50/v1725310748/willie-design/CBG_3_jbkqnc.webp"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725310748/willie-design/CBG_3_jbkqnc.webp"
                   alt="A picture showcasing the Chosen By God website project by Willie"
                   class="left-image"
                 />
 
                 <img
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_50/v1725310748/willie-design/CBG_2_zzyf8l.webp"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725310748/willie-design/CBG_2_zzyf8l.webp"
                   alt="A picture showcasing the Chosen By God website project by Willie"
                   class="left-image"
                 />
 
                 <img
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_50/v1725875118/willie-design/CBG_1.1_sfsdcp.webp"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725875118/willie-design/CBG_1.1_sfsdcp.webp"
                   alt="A picture showcasing the Chosen By God website project by
                 Willie"
                   class="left-image"
@@ -410,7 +422,7 @@
               </div>
               <div class="right-image_wrapper">
                 <img
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_50/v1725310975/willie-design/CBG_Photography_k6d6nc.webp"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725310975/willie-design/CBG_Photography_k6d6nc.webp"
                   alt="A picture showcasing the Chosen By God website project by Willie"
                   class="right_image"
                 />
@@ -439,7 +451,7 @@
 
           <div class="projects-item">
             <img
-              src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_50/v1725310753/willie-design/VitoQR_ngewyl.webp"
+              src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725310753/willie-design/VitoQR_ngewyl.webp"
               alt="phone mockup showcasing the VitoQR Waiter App project"
               class="projects-item_image"
             />
@@ -760,10 +772,22 @@
       </footer>
     </main>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/CustomEase.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
-    <script src="https://unpkg.com/@studio-freight/lenis@1.0.42/dist/lenis.min.js"></script>
+    <script
+      async
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+    ></script>
+    <script
+      async
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/CustomEase.min.js"
+    ></script>
+    <script
+      async
+      src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"
+    ></script>
+    <script
+      async
+      src="https://unpkg.com/@studio-freight/lenis@1.0.42/dist/lenis.min.js"
+    ></script>
     <script src="https://res.cloudinary.com/dp20bvzhn/raw/upload/v1722087885/third-settlements/SplitText.min_yrgwof.js"></script>
 
     <script src="./public/script.js"></script>
