--- a/index.html
+++ b/index.html
@@ -773,19 +773,19 @@
     </main>
 
     <script
-      async
+      defer
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
     ></script>
     <script
-      async
+      defer
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/CustomEase.min.js"
     ></script>
     <script
-      async
+      defer
       src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"
     ></script>
     <script
-      async
+      defer
       src="https://unpkg.com/@studio-freight/lenis@1.0.42/dist/lenis.min.js"
     ></script>
     <script src="https://res.cloudinary.com/dp20bvzhn/raw/upload/v1722087885/third-settlements/SplitText.min_yrgwof.js"></script>
