perf: Lazy load images

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://willie-design.com" />
+    <meta property="og:url" content="https://willie.design.com" />
     <meta property="og:title" content="Home — Williams Alamu" />
     <meta
       property="og:description"
@@ -27,7 +27,7 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://willie-design.com" />
+    <meta property="twitter:url" content="https://willie.design.com" />
     <meta property="twitter:title" content="Home — Williams Alamu" />
     <meta
       property="twitter:description"
@@ -199,7 +199,8 @@
         <div class="projects">
           <div class="projects-item" data-slide-in>
             <img
-              src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725311134/willie-design/balky_ms0wyc.webp"
+              loading="lazy"
+              src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725311134/willie-design/balky_ms0wyc.webp"
               alt="a laptop mockup showing the Balky Studio Website"
               class="projects-item_image"
               data-scale-in
@@ -241,7 +242,8 @@
                     aria-label="Previous slider"
                   >
                     <img
-                      src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725397977/willie-design/arrow_hwkbyh.svg"
+                      loading="lazy"
+                      src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725397977/willie-design/arrow_hwkbyh.svg"
                       alt="Left Arrow Icon"
                     />
                   </button>
@@ -251,7 +253,8 @@
                     aria-label="Next slider"
                   >
                     <img
-                      src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725397977/willie-design/arrow_hwkbyh.svg"
+                      loading="lazy"
+                      src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725397977/willie-design/arrow_hwkbyh.svg"
                       alt="Right Arrow Icon"
                     />
                   </button>
@@ -267,45 +270,52 @@
                     aria-label="Next button for image slider mouse control"
                   ></button>
                   <img
-                    src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725397977/willie-design/arrow_hwkbyh.svg"
+                    loading="lazy"
+                    src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725397977/willie-design/arrow_hwkbyh.svg"
                     alt="Left Arrow Icon"
                     class="mouse-controls_arrow"
                   />
                 </div>
 
                 <img
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725310746/willie-design/TSM_1_otof4y.webp"
+                  loading="lazy"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725310746/willie-design/TSM_1_otof4y.webp"
                   alt="Collage image showcasing the TopSphere Media website project"
                   class="left-image"
                 />
 
                 <img
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725310742/willie-design/TSM_2_oenh8j.webp"
+                  loading="lazy"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725310742/willie-design/TSM_2_oenh8j.webp"
                   alt="Image showcasing the footer section of the TopSphere Media website project"
                   class="left-image"
                 />
 
                 <img
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725310751/willie-design/TSM_3_mlnvxh.webp"
+                  loading="lazy"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725310751/willie-design/TSM_3_mlnvxh.webp"
                   alt="Collage image showcasing the TopSphere Media website project"
                   class="left-image"
                 />
 
                 <img
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725310747/willie-design/TSM_5_cvin31.webp"
+                  loading="lazy"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725310747/willie-design/TSM_5_cvin31.webp"
                   alt="Image showcasing the hero section of the TopSphere Media website project"
                   class="left-image"
                 />
 
                 <img
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725875886/willie-design/TSM_4.1_a0edcm.webp"
+                  loading="lazy"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725875886/willie-design/TSM_4.1_a0edcm.webp"
                   alt="Image showcasing the hero section of the TopSphere Media website project"
                   class="left-image"
                 />
               </div>
               <div class="right-image_wrapper">
                 <img
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725310748/willie-design/tsm_photography_ken6xc.webp"
+                  loading="lazy"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725310748/willie-design/tsm_photography_ken6xc.webp"
                   alt="Picture of a videographer carrying an adnvanced camera during a video shoot"
                   class="right_image"
                 />
@@ -331,7 +341,8 @@
 
           <div class="projects-item">
             <img
-              src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725310759/willie-design/vana_rmnkk0.webp"
+              loading="lazy"
+              src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725310759/willie-design/vana_rmnkk0.webp"
               alt="image showcasing the Vana X-Team Project"
               class="projects-item_image"
             />
@@ -363,7 +374,8 @@
                     aria-label="Previous slider"
                   >
                     <img
-                      src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725397977/willie-design/arrow_hwkbyh.svg"
+                      loading="lazy"
+                      src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725397977/willie-design/arrow_hwkbyh.svg"
                       alt="Left Arrow Icon"
                     />
                   </button>
@@ -373,7 +385,8 @@
                     aria-label="Next slider"
                   >
                     <img
-                      src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725397977/willie-design/arrow_hwkbyh.svg"
+                      loading="lazy"
+                      src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725397977/willie-design/arrow_hwkbyh.svg"
                       alt="Right Arrow Icon"
                     />
                   </button>
@@ -389,32 +402,37 @@
                     aria-label="Next button for image slider mouse control"
                   ></button>
                   <img
-                    src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725397977/willie-design/arrow_hwkbyh.svg"
+                    loading="lazy"
+                    src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725397977/willie-design/arrow_hwkbyh.svg"
                     alt="Left Arrow Icon"
                     class="mouse-controls_arrow"
                   />
                 </div>
 
                 <img
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725310752/willie-design/CBG_4_alpdmr.webp"
+                  loading="lazy"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725310752/willie-design/CBG_4_alpdmr.webp"
                   alt="A picture showcasing the Chosen By God website project by Willie"
                   class="left-image"
                 />
 
                 <img
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725310748/willie-design/CBG_3_jbkqnc.webp"
+                  loading="lazy"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725310748/willie-design/CBG_3_jbkqnc.webp"
                   alt="A picture showcasing the Chosen By God website project by Willie"
                   class="left-image"
                 />
 
                 <img
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725310748/willie-design/CBG_2_zzyf8l.webp"
+                  loading="lazy"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725310748/willie-design/CBG_2_zzyf8l.webp"
                   alt="A picture showcasing the Chosen By God website project by Willie"
                   class="left-image"
                 />
 
                 <img
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725875118/willie-design/CBG_1.1_sfsdcp.webp"
+                  loading="lazy"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725875118/willie-design/CBG_1.1_sfsdcp.webp"
                   alt="A picture showcasing the Chosen By God website project by
                 Willie"
                   class="left-image"
@@ -422,7 +440,8 @@
               </div>
               <div class="right-image_wrapper">
                 <img
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725310975/willie-design/CBG_Photography_k6d6nc.webp"
+                  loading="lazy"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725310975/willie-design/CBG_Photography_k6d6nc.webp"
                   alt="A picture showcasing the Chosen By God website project by Willie"
                   class="right_image"
                 />
@@ -451,7 +470,8 @@
 
           <div class="projects-item">
             <img
-              src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_0/v1725310753/willie-design/VitoQR_ngewyl.webp"
+              loading="lazy"
+              src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725310753/willie-design/VitoQR_ngewyl.webp"
               alt="phone mockup showcasing the VitoQR Waiter App project"
               class="projects-item_image"
             />
@@ -549,6 +569,7 @@
 
           <div class="modal-body">
             <img
+              loading="lazy"
               src="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725876078/willie-design/williev2_1_zyyz6q.webp"
               alt="A 3D generated image of Willie's name"
             />
@@ -772,22 +793,10 @@
       </footer>
     </main>
 
-    <script
-      defer
-      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
-    ></script>
-    <script
-      defer
-      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/CustomEase.min.js"
-    ></script>
-    <script
-      defer
-      src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"
-    ></script>
-    <script
-      defer
-      src="https://unpkg.com/@studio-freight/lenis@1.0.42/dist/lenis.min.js"
-    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/CustomEase.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+    <script src="https://unpkg.com/@studio-freight/lenis@1.0.42/dist/lenis.min.js"></script>
     <script src="https://res.cloudinary.com/dp20bvzhn/raw/upload/v1722087885/third-settlements/SplitText.min_yrgwof.js"></script>
 
     <script src="./public/script.js"></script>
