--- a/index.html
+++ b/index.html
@@ -199,10 +199,9 @@
         <div class="projects">
           <div class="projects-item" data-slide-in>
             <img
-              loading="lazy"
-              src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725311134/willie-design/balky_ms0wyc.webp"
+              src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_40/c_limit,w_auto/dpr_auto/v1725311134/willie-design/balky_ms0wyc.webp"
               alt="a laptop mockup showing the Balky Studio Website"
-              class="projects-item_image"
+              class="projects-item_image cld-responsive"
               data-scale-in
               fetch-priority="high"
             />
@@ -243,7 +242,7 @@
                   >
                     <img
                       loading="lazy"
-                      src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725397977/willie-design/arrow_hwkbyh.svg"
+                      src="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725397977/willie-design/arrow_hwkbyh.svg"
                       alt="Left Arrow Icon"
                     />
                   </button>
@@ -254,7 +253,7 @@
                   >
                     <img
                       loading="lazy"
-                      src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725397977/willie-design/arrow_hwkbyh.svg"
+                      src="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725397977/willie-design/arrow_hwkbyh.svg"
                       alt="Right Arrow Icon"
                     />
                   </button>
@@ -271,7 +270,7 @@
                   ></button>
                   <img
                     loading="lazy"
-                    src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725397977/willie-design/arrow_hwkbyh.svg"
+                    src="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725397977/willie-design/arrow_hwkbyh.svg"
                     alt="Left Arrow Icon"
                     class="mouse-controls_arrow"
                   />
@@ -279,45 +278,45 @@
 
                 <img
                   loading="lazy"
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725310746/willie-design/TSM_1_otof4y.webp"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/c_limit,w_auto/dpr_auto/v1725310746/willie-design/TSM_1_otof4y.webp"
                   alt="Collage image showcasing the TopSphere Media website project"
-                  class="left-image"
+                  class="left-image cld-responsive"
                 />
 
                 <img
                   loading="lazy"
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725310742/willie-design/TSM_2_oenh8j.webp"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/c_limit,w_auto/dpr_auto/v1725310742/willie-design/TSM_2_oenh8j.webp"
                   alt="Image showcasing the footer section of the TopSphere Media website project"
-                  class="left-image"
+                  class="left-image cld-responsive"
                 />
 
                 <img
                   loading="lazy"
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725310751/willie-design/TSM_3_mlnvxh.webp"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/c_limit,w_auto/dpr_auto/v1725310751/willie-design/TSM_3_mlnvxh.webp"
                   alt="Collage image showcasing the TopSphere Media website project"
-                  class="left-image"
+                  class="left-image cld-responsive"
                 />
 
                 <img
                   loading="lazy"
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725310747/willie-design/TSM_5_cvin31.webp"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/c_limit,w_auto/dpr_auto/v1725310747/willie-design/TSM_5_cvin31.webp"
                   alt="Image showcasing the hero section of the TopSphere Media website project"
-                  class="left-image"
+                  class="left-image cld-responsive"
                 />
 
                 <img
                   loading="lazy"
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725875886/willie-design/TSM_4.1_a0edcm.webp"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/c_limit,w_auto/dpr_auto/v1725875886/willie-design/TSM_4.1_a0edcm.webp"
                   alt="Image showcasing the hero section of the TopSphere Media website project"
-                  class="left-image"
+                  class="left-image cld-responsive"
                 />
               </div>
               <div class="right-image_wrapper">
                 <img
                   loading="lazy"
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725310748/willie-design/tsm_photography_ken6xc.webp"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/c_limit,w_auto/dpr_auto/v1725310748/willie-design/tsm_photography_ken6xc.webp"
                   alt="Picture of a videographer carrying an adnvanced camera during a video shoot"
-                  class="right_image"
+                  class="right_image cld-responsive"
                 />
               </div>
             </div>
@@ -342,9 +341,9 @@
           <div class="projects-item">
             <img
               loading="lazy"
-              src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725310759/willie-design/vana_rmnkk0.webp"
+              src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/c_limit,w_auto/dpr_auto/v1725310759/willie-design/vana_rmnkk0.webp"
               alt="image showcasing the Vana X-Team Project"
-              class="projects-item_image"
+              class="projects-item_image cld-responsive"
             />
 
             <div class="projects-item_description">
@@ -375,7 +374,7 @@
                   >
                     <img
                       loading="lazy"
-                      src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725397977/willie-design/arrow_hwkbyh.svg"
+                      src="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725397977/willie-design/arrow_hwkbyh.svg"
                       alt="Left Arrow Icon"
                     />
                   </button>
@@ -386,7 +385,7 @@
                   >
                     <img
                       loading="lazy"
-                      src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725397977/willie-design/arrow_hwkbyh.svg"
+                      src="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725397977/willie-design/arrow_hwkbyh.svg"
                       alt="Right Arrow Icon"
                     />
                   </button>
@@ -403,7 +402,7 @@
                   ></button>
                   <img
                     loading="lazy"
-                    src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725397977/willie-design/arrow_hwkbyh.svg"
+                    src="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725397977/willie-design/arrow_hwkbyh.svg"
                     alt="Left Arrow Icon"
                     class="mouse-controls_arrow"
                   />
@@ -411,39 +410,39 @@
 
                 <img
                   loading="lazy"
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725310752/willie-design/CBG_4_alpdmr.webp"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/c_limit,w_auto/dpr_auto/v1725310752/willie-design/CBG_4_alpdmr.webp"
                   alt="A picture showcasing the Chosen By God website project by Willie"
-                  class="left-image"
+                  class="left-image cld-responsive"
                 />
 
                 <img
                   loading="lazy"
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725310748/willie-design/CBG_3_jbkqnc.webp"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/c_limit,w_auto/dpr_auto/v1725310748/willie-design/CBG_3_jbkqnc.webp"
                   alt="A picture showcasing the Chosen By God website project by Willie"
-                  class="left-image"
+                  class="left-image cld-responsive"
                 />
 
                 <img
                   loading="lazy"
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725310748/willie-design/CBG_2_zzyf8l.webp"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_30/c_limit,w_auto/dpr_auto/v1725310748/willie-design/CBG_2_zzyf8l.webp"
                   alt="A picture showcasing the Chosen By God website project by Willie"
-                  class="left-image"
+                  class="left-image cld-responsive"
                 />
 
                 <img
                   loading="lazy"
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725875118/willie-design/CBG_1.1_sfsdcp.webp"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/c_limit,w_auto/dpr_auto/v1725875118/willie-design/CBG_1.1_sfsdcp.webp"
                   alt="A picture showcasing the Chosen By God website project by
                 Willie"
-                  class="left-image"
+                  class="left-image cld-responsive"
                 />
               </div>
               <div class="right-image_wrapper">
                 <img
                   loading="lazy"
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725310975/willie-design/CBG_Photography_k6d6nc.webp"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_30/c_limit,w_auto/dpr_auto/v1725310975/willie-design/CBG_Photography_k6d6nc.webp"
                   alt="A picture showcasing the Chosen By God website project by Willie"
-                  class="right_image"
+                  class="right_image cld-responsive"
                 />
               </div>
             </div>
@@ -471,9 +470,9 @@
           <div class="projects-item">
             <img
               loading="lazy"
-              src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/v1725310753/willie-design/VitoQR_ngewyl.webp"
+              src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/c_limit,w_auto/dpr_auto/v1725310753/willie-design/VitoQR_ngewyl.webp"
               alt="phone mockup showcasing the VitoQR Waiter App project"
-              class="projects-item_image"
+              class="projects-item_image cld-responsive"
             />
 
             <div class="projects-item_description">
@@ -569,8 +568,9 @@
 
           <div class="modal-body">
             <img
+              class="cld-responsive"
               loading="lazy"
-              src="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725876078/willie-design/williev2_1_zyyz6q.webp"
+              src="https://res.cloudinary.com/dp20bvzhn/image/upload/c_limit,w_auto/dpr_auto/v1725876078/willie-design/williev2_1_zyyz6q.webp"
               alt="A 3D generated image of Willie's name"
             />
           </div>
@@ -793,6 +793,7 @@
       </footer>
     </main>
 
+    <script src="https://unpkg.com/cloudinary-core@latest/cloudinary-core-shrinkwrap.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/CustomEase.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
