perf: Change the image format of large images to avif

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     />
     <meta
       property="og:image"
-      content="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725969587/willie-design/v2Thumbnail_zciv0c.webp"
+      content="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725969587/willie-design/v2Thumbnail_zciv0c.avif"
     />
 
     <!-- Twitter -->
@@ -35,7 +35,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725969587/willie-design/v2Thumbnail_zciv0c.webp"
+      content="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725969587/willie-design/v2Thumbnail_zciv0c.avif"
     />
 
     <!-- Favicon -->
@@ -199,7 +199,7 @@
         <div class="projects">
           <div class="projects-item" data-slide-in>
             <img
-              src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_40/c_limit,w_auto/dpr_auto/v1725311134/willie-design/balky_ms0wyc.webp"
+              src="https://res.cloudinary.com/dp20bvzhn/image/upload/dpr_auto,q_49/v1725311134/willie-design/balky_ms0wyc.webp"
               alt="a laptop mockup showing the Balky Studio Website"
               class="projects-item_image cld-responsive"
               data-scale-in
@@ -278,35 +278,35 @@
 
                 <img
                   loading="lazy"
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/c_limit,w_auto/dpr_auto/v1725310746/willie-design/TSM_1_otof4y.webp"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/c_limit,w_auto/dpr_auto/v1725310746/willie-design/TSM_1_otof4y.avif"
                   alt="Collage image showcasing the TopSphere Media website project"
                   class="left-image cld-responsive"
                 />
 
                 <img
                   loading="lazy"
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/c_limit,w_auto/dpr_auto/v1725310742/willie-design/TSM_2_oenh8j.webp"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/c_limit,w_auto/dpr_auto/v1725310742/willie-design/TSM_2_oenh8j.avif"
                   alt="Image showcasing the footer section of the TopSphere Media website project"
                   class="left-image cld-responsive"
                 />
 
                 <img
                   loading="lazy"
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/c_limit,w_auto/dpr_auto/v1725310751/willie-design/TSM_3_mlnvxh.webp"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/c_limit,w_auto/dpr_auto/v1725310751/willie-design/TSM_3_mlnvxh.avif"
                   alt="Collage image showcasing the TopSphere Media website project"
                   class="left-image cld-responsive"
                 />
 
                 <img
                   loading="lazy"
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/c_limit,w_auto/dpr_auto/v1725310747/willie-design/TSM_5_cvin31.webp"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/c_limit,w_auto/dpr_auto/v1725310747/willie-design/TSM_5_cvin31.avif"
                   alt="Image showcasing the hero section of the TopSphere Media website project"
                   class="left-image cld-responsive"
                 />
 
                 <img
                   loading="lazy"
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/c_limit,w_auto/dpr_auto/v1725875886/willie-design/TSM_4.1_a0edcm.webp"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/c_limit,w_auto/dpr_auto/v1725875886/willie-design/TSM_4.1_a0edcm.avif"
                   alt="Image showcasing the hero section of the TopSphere Media website project"
                   class="left-image cld-responsive"
                 />
@@ -314,7 +314,7 @@
               <div class="right-image_wrapper">
                 <img
                   loading="lazy"
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/c_limit,w_auto/dpr_auto/v1725310748/willie-design/tsm_photography_ken6xc.webp"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/c_limit,w_auto/dpr_auto/v1725310748/willie-design/tsm_photography_ken6xc.avif"
                   alt="Picture of a videographer carrying an adnvanced camera during a video shoot"
                   class="right_image cld-responsive"
                 />
@@ -341,7 +341,7 @@
           <div class="projects-item">
             <img
               loading="lazy"
-              src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/c_limit,w_auto/dpr_auto/v1725310759/willie-design/vana_rmnkk0.webp"
+              src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/c_limit,w_auto/dpr_auto/v1725310759/willie-design/vana_rmnkk0.avif"
               alt="image showcasing the Vana X-Team Project"
               class="projects-item_image cld-responsive"
             />
@@ -410,28 +410,28 @@
 
                 <img
                   loading="lazy"
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/c_limit,w_auto/dpr_auto/v1725310752/willie-design/CBG_4_alpdmr.webp"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/c_limit,w_auto/dpr_auto/v1725310752/willie-design/CBG_4_alpdmr.avif"
                   alt="A picture showcasing the Chosen By God website project by Willie"
                   class="left-image cld-responsive"
                 />
 
                 <img
                   loading="lazy"
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/c_limit,w_auto/dpr_auto/v1725310748/willie-design/CBG_3_jbkqnc.webp"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/c_limit,w_auto/dpr_auto/v1725310748/willie-design/CBG_3_jbkqnc.avif"
                   alt="A picture showcasing the Chosen By God website project by Willie"
                   class="left-image cld-responsive"
                 />
 
                 <img
                   loading="lazy"
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_30/c_limit,w_auto/dpr_auto/v1725310748/willie-design/CBG_2_zzyf8l.webp"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_30/c_limit,w_auto/dpr_auto/v1725310748/willie-design/CBG_2_zzyf8l.avif"
                   alt="A picture showcasing the Chosen By God website project by Willie"
                   class="left-image cld-responsive"
                 />
 
                 <img
                   loading="lazy"
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/c_limit,w_auto/dpr_auto/v1725875118/willie-design/CBG_1.1_sfsdcp.webp"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/c_limit,w_auto/dpr_auto/v1725875118/willie-design/CBG_1.1_sfsdcp.avif"
                   alt="A picture showcasing the Chosen By God website project by
                 Willie"
                   class="left-image cld-responsive"
@@ -440,7 +440,7 @@
               <div class="right-image_wrapper">
                 <img
                   loading="lazy"
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_30/c_limit,w_auto/dpr_auto/v1725310975/willie-design/CBG_Photography_k6d6nc.webp"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_10/c_limit,w_auto/dpr_auto/v1725310975/willie-design/CBG_Photography_k6d6nc.avif"
                   alt="A picture showcasing the Chosen By God website project by Willie"
                   class="right_image cld-responsive"
                 />
@@ -470,7 +470,7 @@
           <div class="projects-item">
             <img
               loading="lazy"
-              src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/c_limit,w_auto/dpr_auto/v1725310753/willie-design/VitoQR_ngewyl.webp"
+              src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/c_limit,w_auto/dpr_auto/v1725310753/willie-design/VitoQR_ngewyl.avif"
               alt="phone mockup showcasing the VitoQR Waiter App project"
               class="projects-item_image cld-responsive"
             />
@@ -570,7 +570,7 @@
             <img
               class="cld-responsive"
               loading="lazy"
-              src="https://res.cloudinary.com/dp20bvzhn/image/upload/c_limit,w_auto/dpr_auto/v1725876078/willie-design/williev2_1_zyyz6q.webp"
+              src="https://res.cloudinary.com/dp20bvzhn/image/upload/c_limit,w_auto/dpr_auto/v1725876078/willie-design/williev2_1_zyyz6q.avif"
               alt="A 3D generated image of Willie's name"
             />
           </div>
@@ -793,7 +793,10 @@
       </footer>
     </main>
 
-    <script src="https://unpkg.com/cloudinary-core@latest/cloudinary-core-shrinkwrap.js"></script>
+    <script
+      async
+      src="https://unpkg.com/cloudinary-core@latest/cloudinary-core-shrinkwrap.js"
+    ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/CustomEase.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
