--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <div class="projects">
           <div class="projects-item" data-slide-in>
             <img
-              src="https://res.cloudinary.com/dp20bvzhn/image/upload/dpr_auto,q_49/v1725311134/willie-design/balky_ms0wyc.webp"
+              src="https://res.cloudinary.com/dp20bvzhn/image/upload/f_auto,q_auto/c_limit,w_auto/dpr_auto/v1725311134/willie-design/balky_ms0wyc.avif"
               alt="a laptop mockup showing the Balky Studio Website"
               class="projects-item_image cld-responsive"
               data-scale-in
