perf: Fix the typo on the fetchpriority tag

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
               alt="a laptop mockup showing the Balky Studio Website"
               class="projects-item_image cld-responsive"
               data-scale-in
-              fetch-priority="high"
+              fetchpriority="high"
             />
 
             <div class="projects-item_description" data-first-description>
