chore: Change williams email address and adjust footer layout design on mobile screen size

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
         <a
           class="header-link uc-fs13-fw500"
-          href="mailto:heywilliams@gmail.com"
+          href="mailto:williedsgnr@gmail.com"
           rel="noopener noreferrer"
           target="_blank"
           data-faded-out="true"
@@ -529,7 +529,7 @@
                       target="_blank"
                       class="nav-item_link uc-fs13-fw400"
                       data-modal-reveal
-                      >williedsgnr (at) gmail.com</a
+                      >williedsgnr@gmail.com</a
                     >
                   </li>
                   <li class="nav-list_item">
@@ -722,7 +722,7 @@
                 <ul class="nav-list">
                   <li class="nav-list_item">
                     <a
-                      href="mailto:heywilliams@gmail.com"
+                      href="mailto:williedsgnr@gmail.com"
                       rel="noopener noreferrer"
                       target="_blank"
                       class="nav-item_link uc-fs13-fw500"
