chore: Swap the position of the static and image slider in the fourth project item

--- a/index.html
+++ b/index.html
@@ -231,9 +231,9 @@
             </div>
           </div>
 
-          <div class="projects-item slider" data-project-slider>
+          <div class="projects-item slider">
             <div class="slider-row">
-              <div class="left-image_wrapper">
+              <div class="left-image_wrapper" data-project-slider>
                 <div class="controls">
                   <button
                     class="prev-button"
@@ -363,9 +363,17 @@
             </div>
           </div>
 
-          <div class="projects-item slider" data-project-slider>
+          <div class="projects-item slider">
             <div class="slider-row">
-              <div class="left-image_wrapper">
+              <div class="right-image_wrapper">
+                <img
+                  loading="lazy"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_10/c_limit,w_auto/dpr_auto/v1725310975/willie-design/CBG_Photography_k6d6nc.avif"
+                  alt="A picture showcasing the Chosen By God website project by Willie"
+                  class="right_image cld-responsive"
+                />
+              </div>
+              <div class="left-image_wrapper" data-project-slider>
                 <div class="controls">
                   <button
                     class="prev-button"
@@ -435,14 +443,6 @@
                   alt="A picture showcasing the Chosen By God website project by
                 Willie"
                   class="left-image cld-responsive"
-                />
-              </div>
-              <div class="right-image_wrapper">
-                <img
-                  loading="lazy"
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_10/c_limit,w_auto/dpr_auto/v1725310975/willie-design/CBG_Photography_k6d6nc.avif"
-                  alt="A picture showcasing the Chosen By God website project by Willie"
-                  class="right_image cld-responsive"
                 />
               </div>
             </div>
